# suno-ai-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/suno_mcp/: __init__.py  __main__.py  browser_client.py  extract_cookie.py  server.py  suno_client.py
