[project]
name = "suno-ai-mcp-connector"
version = "0.1.0"
description = "MCP server for Suno AI music generation using your suno.com session cookie"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "cloakbrowser>=0.3.0",
    "browser-cookie3>=0.20.0",
    "playwright>=1.48.0",
    "cryptography>=43.0.0",
]

[project.scripts]
suno-mcp = "suno_mcp.__main__:main"
suno-mcp-extract-cookie = "suno_mcp.extract_cookie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suno_mcp"]
